--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 
 	"manifest_version": 2,
-	"name": "MangasSubscriber_DEV_BRANCHE",
-	"version": "1.0.0",
+	"name": "MangasSubscriber",
+	"version": "1.0.0_hotfix2",
 
 	"icons": {
 		"48": "icons/high_resolution_logo.png"
@@ -20,7 +20,7 @@
 	"browser_action": {
 		"browser_style": true,
 		"default_icon": "icons/high_resolution_logo.png",
-		"default_title": "MangaSub",
+		"default_title": "MangasSub",
 		"default_popup": "popup/popup.html"
 	},
 
@@ -50,7 +50,7 @@
 	
 	"applications": {
 		"gecko": {
-			"id": "MangasSubscriber_DEV_BRANCHE@Lullabee"
+			"id": "MangasSubscriber@Lullabee"
 		}
 	}
 
