MangasSubscriber version 2 ready
- all new interface :
-- no more list duplicaate between popup and options page ! every management possibility for a manga is accessible directly from the popup list
-- non need to click several times to access the mangas list ! it's available directly after clicking the popup
-- changed text buttons to icons, and remade all icons
-- options and help now open directly in the popup
-- it is now possible to apply certain actions to several mangas at once !

- new functionnalities :
-- tags ! you can now define and add tags to your mangas to more easily filter them
-- search ! you can now search for something over all supported websites
-- follow individual mangas on different websites ! you can register several website for each manga on which to check for updates
-- import/export online ! (requires firefox sync) if you're signed in on firefox and have activated firefox synchronization, you can save your list online to easily access it from different computers with a click of a button

- optimizations :
-- faster loading of the popup !
-- faster updates !
-- faster everything !

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "1.0.0_hotfix3",
+	"version": "2.0.0",
 
 	"icons": {
-		"48": "icons/high_resolution_logo.png"
+		"48": "icons/logo.svg"
 	},
 
 	"permissions": [
@@ -19,7 +19,7 @@
 
 	"browser_action": {
 		"browser_style": true,
-		"default_icon": "icons/high_resolution_logo.png",
+		"default_icon": "icons/logo.svg",
 		"default_title": "MangasSub",
 		"default_popup": "popup/popup.html"
 	},
@@ -32,11 +32,13 @@
 		{
 			"run_at": "document_start",
 			"matches": ["*://www.mangahere.cc/manga/*",
-						"*://fanfox.net/manga/*",
-						"*://www.mangatown.com/manga/*",
 						"*://m.mangahere.cc/manga/*",
-						"*://m.fanfox.net/manga/*",
-						"*://m.mangatown.com/manga/*"],
+						"*://fanfox.net/manga/*",
+						"*://fanfox.net//manga/*",
+						"*://m.fanfox.net//manga/*",
+						"*://www.mangatown.com/manga/*",
+						"*://m.mangatown.com/manga/*",
+						"*://www.readmng.com/*"],
 			"js": ["content_tasks/content_script.js"],
 			"css":["content_tasks/content.css"]
 		}
