--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.0.0hotfix3",
+	"version": "2.0.1",
 
 	"icons": {
 		"48": "icons/logo.svg"
