--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.0.1",
+	"version": "2.0.2",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -38,7 +38,10 @@
 						"*://m.fanfox.net//manga/*",
 						"*://www.mangatown.com/manga/*",
 						"*://m.mangatown.com/manga/*",
-						"*://www.readmng.com/*"],
+						"*://www.readmng.com/*",
+						"*://www.webtoons.com/*/*/*",
+						"*://mangakakalot.com/*/*/*",
+						"*://manganelo.com/*/*/*"],
 			"js": ["content_tasks/content_script.js"],
 			"css":["content_tasks/content.css"]
 		}
