--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.0.2",
+	"version": "2.0.3",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -34,12 +34,14 @@
 			"matches": ["*://www.mangahere.cc/manga/*",
 						"*://m.mangahere.cc/manga/*",
 						"*://fanfox.net/manga/*",
+						"*://m.fanfox.net/manga/*",
 						"*://fanfox.net//manga/*",
 						"*://m.fanfox.net//manga/*",
 						"*://www.mangatown.com/manga/*",
 						"*://m.mangatown.com/manga/*",
 						"*://www.readmng.com/*",
 						"*://www.webtoons.com/*/*/*",
+						"*://m.webtoons.com/*/*/*",
 						"*://mangakakalot.com/*/*/*",
 						"*://manganelo.com/*/*/*"],
 			"js": ["content_tasks/content_script.js"],
@@ -52,6 +54,10 @@
 		"open_in_tab":true,
 		"browser_style": true
 	},
+
+	"web_accessible_resources": [
+		"icons/*.svg"
+	],
 	
 	"applications": {
 		"gecko": {
