--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.0.3",
+	"version": "2.0.3_hotfix1",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -12,9 +12,17 @@
 		"activeTab",
 		"storage",
 		"unlimitedStorage",
-		"<all_urls>",
 		"downloads",
-		"clipboardWrite"
+		"clipboardWrite",
+		"*://*.mangahere.cc/*",
+		"*://fanfox.net/*",
+		"*://*.fanfox.net/*",
+		"*://*.mangatown.com/*",
+		"*://*.readmng.com/*",
+		"*://*.webtoons.com/*",
+		"*://mangakakalot.com/*",
+		"*://manganelo.com/*",
+		"*://pastebin.com/*"
 	],
 
 	"browser_action": {
