--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.1.0",
+	"version": "2.1.1",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -17,12 +17,12 @@
 		"clipboardWrite",
 		"*://fanfox.net/*",
 		"*://*.mangatown.com/*",
-		"*://*.readmng.com/*",
 		"*://*.webtoons.com/*",
 		"*://mangahere.cc/*",
 		"*://*.mangahere.cc/*",
 		"*://mangakakalot.com/*",
 		"*://manganelo.com/*",
+		"*://isekaiscan.com/*",
 		"*://pastebin.com/*"
 	],
 
@@ -48,11 +48,11 @@
 						"*://m.fanfox.net//manga/*",
 						"*://www.mangatown.com/manga/*",
 						"*://m.mangatown.com/manga/*",
-						"*://www.readmng.com/*",
 						"*://www.webtoons.com/*/*/*",
 						"*://m.webtoons.com/*/*/*",
 						"*://mangakakalot.com/*/*/*",
-						"*://manganelo.com/*/*/*"],
+						"*://manganelo.com/*/*/*",
+						"*://isekaiscan.com/*"],
 			"js": ["content_tasks/content_script.js"],
 			"css":["content_tasks/content.css"]
 		}
