--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.3.8",
+	"version": "2.3.9",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -24,6 +24,7 @@
 		"*://manganelo.com/*",
 		"*://manganato.com/*",
 		"*://readmanganato.com/*",
+		"*://chapmanganato.com/*",
 		"*://isekaiscan.com/*",
 		"*://mangadex.org/*",
 		"*://api.mangadex.org/*",
@@ -58,6 +59,7 @@
 						"*://manganelo.com/*/*/*",
 						"*://manganato.com/*",
 						"*://readmanganato.com/*/*",
+						"*://chapmanganato.com/*/*",
 						"*://isekaiscan.com/*",
 						"*://mangadex.org/*"],
 			"js": ["content_tasks/content_script.js"],
