--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
 	"manifest_version": 2,
 	"name": "MangasSubscriber",
-	"version": "2.3.9",
+	"version": "2.4.0",
 
 	"icons": {
 		"48": "icons/logo.svg"
@@ -20,14 +20,13 @@
 		"*://*.webtoons.com/*",
 		"*://mangahere.cc/*",
 		"*://*.mangahere.cc/*",
-		"*://mangakakalot.com/*",
-		"*://manganelo.com/*",
 		"*://manganato.com/*",
 		"*://readmanganato.com/*",
 		"*://chapmanganato.com/*",
 		"*://isekaiscan.com/*",
 		"*://mangadex.org/*",
 		"*://api.mangadex.org/*",
+		"*://*.mangago.me/*",
 		"*://api.paste.ee/*"
 	],
 
@@ -55,13 +54,12 @@
 						"*://m.mangatown.com/manga/*",
 						"*://www.webtoons.com/*/*/*",
 						"*://m.webtoons.com/*/*/*",
-						"*://mangakakalot.com/*/*/*",
-						"*://manganelo.com/*/*/*",
 						"*://manganato.com/*",
 						"*://readmanganato.com/*/*",
 						"*://chapmanganato.com/*/*",
 						"*://isekaiscan.com/*",
-						"*://mangadex.org/*"],
+						"*://mangadex.org/*",
+						"*://www.mangago.me/*"],
 			"js": ["content_tasks/content_script.js"],
 			"css":["content_tasks/content.css"]
 		}
