--- a/manifest.json
+++ b/manifest.json
@@ -75,7 +75,7 @@
 		"icons/*.svg"
 	],
 	
-	"applications": {
+	"browser_specific_settings": {
 		"gecko": {
 			"id": "MangasSubscriber@Lullabee"
 		}
